--- a/views/home.html
+++ b/views/home.html
@@ -21,7 +21,7 @@
             <button type="submit" class="btn btn-primary">Submit</button>
             
           </form>
-          <a href="/signup"><button class="btn btn-primary">Register</button></a>
+          <a href="/signup"><button class="btn btn-primary mt-3">Register</button></a>
     </div>
 
     
