--- a/views/signup.html
+++ b/views/signup.html
@@ -24,7 +24,7 @@
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
-          <a href="/"><button class="btn btn-primary">Login</button></a>
+          <a href="/"><button class="btn btn-primary mt-3">Login</button></a>
     </div>
 
     
