Added download expense and past download history

--- a/views/forgotpassword.html
+++ b/views/forgotpassword.html
@@ -20,6 +20,9 @@
           <a href="/signup"><button class="btn btn-primary mt-3">Register</button></a>
           <a href="/"><button class="btn btn-primary mt-3">Login</button></a>
     </div>
+    <div class="container error-box" style="max-width: 500px; font-size: 15px; color: red;">
+    </div>
+
 
     
 
