--- a/views/home.html
+++ b/views/home.html
@@ -24,6 +24,8 @@
           <a href="/signup"><button class="btn btn-primary mt-3">Register</button></a>
           <a href="/forgotpassword"><button class="btn btn-primary mt-3">Forgot Password</button></a>
     </div>
+    <div class="container error-box" style="max-width: 500px; font-size: 15px; color: red;">
+    </div>
 
     
 
