--- a/views/downloadhistory.html
+++ b/views/downloadhistory.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="d-flex justify-content-end" style="max-width: 90%; margin-top: 8px;">
+      <a href="/expense" style="margin-right: 10px;"><button class="btn btn-primary" >Add Expense</button></a>
       <a href="/premium/report" style="margin-right: 10px;"><button class="btn btn-primary report premium-btns" style="display: none;">Report</button></a>
       <a href="/premium/leaderboard" style="margin-right: 10px;"><button class="btn btn-primary leaderboard premium-btns" style="display: none;">Leaderboard</button></a>
       <button class="btn btn-warning buy-premium normal-btns" style="display: none;">Buy Premium</button>
@@ -15,31 +16,10 @@
       <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     </div>
 
-    <div class="container mt-5" style="max-width: 500px;">
-        <form onsubmit="addExpense(event)">
-            <div class="mb-3">
-                <label for="expenseAmount" class="form-label">Expense Amount</label>
-                <input type="number" class="form-control" id="expenseAmount" name="expenseAmount" required>
-              </div>
-            <div class="mb-3">
-              <label for="description" class="form-label">Description</label>
-              <input type="text" class="form-control" id="description" name="description" required>
-            </div>
-            <div class="mb-3">
-                <label for="category" class="form-label">Category</label>
-                <select name="category" id="category" class="form-select" aria-label="Category">
-                    <option value="food">Food</option>
-                    <option value="entertainment">Entertainment</option>
-                    <option value="others">Other</option>
-                  </select>
-            </div>
-            <button type="submit" class="btn btn-primary">Add Expense</button>
-          </form>
+    
 
-          
-          
-    </div>
-    <div class="container mt-5 expenses" style="max-width: 1000px;">
+    
+    <div class="container mt-5 history" style="max-width: 1000px;">
         <ul class="list-group">
             <li class="list-group-item">An item</li>
             <li class="list-group-item">A second item</li>
@@ -48,17 +28,14 @@
             <li class="list-group-item">And a fifth one</li>
           </ul>
     </div>
-    <div class="container d-flex justify-content-end" style="max-width: 1000px;">
-      <button class="btn btn-primary download-btn" style="margin-right: 8px;">Download</button>
-      <a href="/expense/downloadhistory"><button class="btn btn-primary">Previous Downloads</button></a>
-    </div>
+
    
 
     
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="/js/expense.js"></script>
+    <script src="/js/downloadhistory.js"></script>
     <script src="/js/payment.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
