--- a/views/report.html
+++ b/views/report.html
@@ -3,19 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leaderboard</title>
+    <title>Report</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
     <div class="d-flex justify-content-end" style="max-width: 90%; margin-top: 8px;">
         <a href="/expense" style="margin-right: 10px;"><button class="btn btn-primary" >Add Expense</button></a>
-        <a href="/premium/report" style="margin-right: 10px;"><button class="btn btn-primary report premium-btns">Report</button></a>
+        <a href="/premium/leaderboard" style="margin-right: 10px;"><button class="btn btn-primary leaderboard premium-btns">Leaderboard</button></a>
         <button class="btn btn-success premium">Premium User</button>
       </div>
 
-    <div class="container mt-5" style="max-width: 1000px;">
-        <ul class="list-group">
-            <h5>Leaderboard :</h5>
+    <div class="container mt-5 rep" style="max-width: 1000px;">
+        <ul class="list-group daily-report">
+            <h5>Daily Report :</h5>
+            <li class="list-group-item">An item</li>
+            <li class="list-group-item">A second item</li>
+            <li class="list-group-item">A third item</li>
+            <li class="list-group-item">A fourth item</li>
+            <li class="list-group-item">And a fifth one</li>
+          </ul>
+
+
+          <ul class="list-group mt-5 monthly-report">
+            <h5>Monthly Report :</h5>
             <li class="list-group-item">An item</li>
             <li class="list-group-item">A second item</li>
             <li class="list-group-item">A third item</li>
@@ -26,7 +36,7 @@
 
     
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-    <script src="/js/leaderboard.js"></script>
+    <script src="/js/report.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
