--- a/views/signup.html
+++ b/views/signup.html
@@ -26,6 +26,8 @@
           </form>
           <a href="/"><button class="btn btn-primary mt-3">Login</button></a>
     </div>
+    <div class="container error-box" style="max-width: 500px; font-size: 15px; color: red;">
+    </div>
 
     
 
